<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2013, The ChameleonOS Project
** Copyright 2013, The MagicMod Project
**
** * Licensed under the GNU GPLv2 license
**
** The text of the license can be found in the LICENSE file
** or at https://www.gnu.org/licenses/gpl-2.0.txt
*/
-->
<resources>

    <string name="app_name">Theme Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Reset theme</string>
    <string name="menu_reset_element">Reset</string>
    <string name="menu_delete_theme">Delete theme</string>
    <string name="menu_info">Theme Info</string>
    <string name="menu_save_theme">Save</string>
    <string name="menu_rename_backup">Rename backup</string>
    <string name="menu_overwrite_backup">Overwrite backup</string>
    <string name="menu_delete_backup">Delete backup</string>

    <string name="btn_apply_theme">Apply</string>
    <string name="btn_ok">OK</string>

    <string name="btn_play">Play</string>
    <string name="btn_set">Set</string>

    <string name="ringtone">Ringtone</string>
    <string name="notification">Notification</string>

    <string name="loading_themes">Loading themes...</string>
    <string name="applying_theme">Applying theme...</string>
    <string name="installing_theme">Installing theme...</string>
    <string name="saving_theme">Saving current theme...</string>
    <string name="restoring_theme">Restoring theme...</string>

    <string name="tab_themes">Complete Themes</string>
    <string name="tab_mixer">Theme Mixer</string>
    <string name="tab_get_themes">Get Themes</string>
    <string name="tab_backup_restore">Backup/Restore</string>

    <string name="coming_soon">Coming Soon!</string>
    <string name="coming_soon_dl_info">Coming Soon!Please Download miui theme and put it into your sdcard MagicMod/theme folder!!!</string>

    <string name="remove_existing_theme">Remove currently applied theme</string>

    <string name="mixer_icons_label">Icons</string>
    <string name="mixer_walllpaper_label">Wallpaper</string>
    <string name="mixer_systemui_label">Status bar</string>
    <string name="mixer_framework_label">Framework</string>
    <string name="mixer_lockscreen_wallpaper_label">Lockscreen Wallpaper</string>
    <string name="mixer_contacts_label">Contacts</string>
    <string name="mixer_dialer_label">Dialer</string>
    <string name="mixer_ringtones_label">Ringtones</string>
    <string name="mixer_bootanimation_label">Boot animation</string>
    <string name="mixer_mms_label">Messaging</string>
    <string name="mixer_font_label">Fonts</string>
    <string name="mixer_launcher_label">Launcher</string>
    <string name="mixer_third_party_apps">3rd Party Apps</string>

    <string name="not_a_theme_file">File is not a theme!</string>

    <string name="theme_info_details">Theme details</string>
    <string name="theme_info_name">Name: </string>
    <string name="theme_info_author">Author: </string>
    <string name="theme_info_designer">Designer: </string>
    <string name="theme_info_version">Version: </string>

    <!-- ChameleonOS theme links -->
    <string name="get_themes_goo_title">goo.im</string>
    <string name="get_themes_goo_link">http://goo.im/devs/ChameleonOS/themes/</string>
    <string name="get_themes_chaos_forums_title">ChameleonOS Forums</string>
    <string name="get_themes_chaos_forums_link">http://forums.chameleonos.org/forums/theme-releases.10/</string>
    <!-- MIUI theme links -->
    <string name="get_themes_pimpmymiui_title">Pimp My MIUI</string>
    <string name="get_themes_pimpmymiui_link">http://pimpmymiui.com/themes/full-themes</string>
    <string name="get_themes_droidviews_title">Droid Views</string>
    <string name="get_themes_droidviews_link">http://droidviews.com/tag/miui-jb-themes/</string>
    <string name="get_themes_miui_title">MIUI forums</string>
    <string name="get_themes_miui_link">http://en.miui.com/forum.php?gid=3</string>

    <string name="get_themes_getting_started">Some external links to themes to get you started.</string>
    <string name="get_themes_mm">MagicMod Themes</string>
    <string name="get_themes_miui">MIUI Themes (note: not all elements theme)</string>

    <string name="dlg_apply_theme_with_font_title">Apply theme with font</string>
    <string name="dlg_apply_theme_with_font_body">This theme contains fonts which would require a system reboot to be applied.</string>
    <string name="dlg_apply_theme_with_font_without_reboot">Apply theme without font</string>
    <string name="dlg_apply_theme_with_font_and_reboot">Apply theme with font and reboot</string>

    <string name="dlg_apply_font_title">Apply font</string>
    <string name="dlg_apply_font_body">Some parts of the system will retain the previous font until the system is restarted.</string>
    <string name="dlg_apply_font_without_reboot">Apply font and reboot later</string>
    <string name="dlg_apply_font_and_reboot">Apply font and reboot now</string>

    <string name="dlg_reset_theme_with_font_title">Remove theme with font</string>
    <string name="dlg_reset_theme_with_font_body">This theme contains fonts which would require a system reboot to be revert to stock fonts.</string>
    <string name="dlg_reset_theme_with_font_without_reboot">Remove theme and leave font</string>
    <string name="dlg_reset_theme_with_font_and_reboot">Remove theme and font, and reboot</string>

    <string name="dlg_reset_font_title">Remove font</string>
    <string name="dlg_reset_font_body">Removing a custom font requires that the system be restarted.</string>
    <string name="dlg_reset_font_without_reboot">Leave custom font installed</string>
    <string name="dlg_reset_font_and_reboot">Remove font and reboot now</string>

    <string name="dlg_scale_boot_title">Scale boot animation</string>
    <string name="dlg_scale_boot_body">Scaling the boot animation will allow it to be resized to fit your device better.\n\nIf you encounter a blank animation, you should try re-applying this animation without scaling.</string>
    <string name="dlg_scale_boot_no_scaling">Apply without scaling</string>
    <string name="dlg_scale_boot_with_scaling">Apply with scaling</string>

    <string name="dlg_theme_failed_title">Oooooops!</string>
    <string name="dlg_theme_failed_body">Something went horribly wrong and the theme did not apply.\n\nYou may want to try re-applying the theme or try a different theme.</string>

    <string name="dlg_install_theme_title">Install Theme</string>
    <string name="dlg_install_theme_body">Install this theme?</string>
    <string name="dlg_install_theme_cancel">Cancel</string>
    <string name="dlg_install_theme_install">Install</string>

    <string name="dlg_theme_exists_title">Theme exists</string>
    <string name="dlg_theme_exists_body">This theme has already been installed.\n\nPress install if you wish to overwrite the existing installed theme</string>
    <string name="dlg_theme_exists_cancel">Cancel</string>
    <string name="dlg_theme_exists_install">Install</string>

    <string name="dlg_backup_theme_title">Backup current theme</string>
    <string name="dlg_backup_theme_body">Backup Name</string>
    <string name="dlg_backup_theme_cancel">Cancel</string>
    <string name="dlg_backup_theme_save">Save</string>

    <string name="dlg_rename_backup_title">Rename backup</string>
    <string name="dlg_rename_backup_body">Backup Name</string>
    <string name="dlg_rename_backup_cancel">Cancel</string>
    <string name="dlg_rename_backup_save">Rename</string>

    <string name="dlg_restore_backup_title">Restore backup</string>
    <string name="dlg_restore_backup_body">Restore \"%s\"</string>
    <string name="dlg_restore_backup_cancel">Cancel</string>
    <string name="dlg_restore_backup_delete">Restore</string>

    <string name="dlg_overwrite_backup_title">Overwrite theme</string>
    <string name="dlg_overwrite_backup_body">Overwrite \'%s\' with current theme?</string>
    <string name="dlg_overwrite_backup_cancel">Cancel</string>
    <string name="dlg_overwrite_backup_overwrite">Overwrite</string>

    <string name="dlg_delete_backup_title">Delete backup</string>
    <string name="dlg_delete_backup_body">Delete %s?</string>
    <string name="dlg_delete_backup_cancel">Cancel</string>
    <string name="dlg_delete_backup_delete">Delete</string>

    <string name="backup_saved_on">Saved on: %s</string>
    <string name="backup_size">%.2fMB</string>
    <string name="backup_not_saved">Current theme not saved.</string>
</resources>
