<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/DetailLabel"
            android:text="@string/theme_info_name" />
        <TextView
            style="@style/DetailInfoLabel"
            android:id="@+id/theme_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/DetailLabel"
            android:text="@string/theme_info_version" />
        <TextView
            style="@style/DetailInfoLabel"
            android:id="@+id/theme_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/DetailLabel"
            android:text="@string/theme_info_author" />
        <TextView
            style="@style/DetailInfoLabel"
            android:id="@+id/theme_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/DetailLabel"
            android:text="@string/theme_info_designer" />
        <TextView
            style="@style/DetailInfoLabel"
            android:id="@+id/theme_designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>